--- a/src/common.css
+++ b/src/common.css
@@ -1,62 +1,48 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: bisque;
-  /* background-color: #fafafa; */
+  background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
 }
 
-/* img {
-  display: block;
-  max-width: 100%;
+fieldset{
+  background-color: #4056b4;
+  padding: 10px 0;
+  border: none;
 }
 
-:root {
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  --animation-duration: 250ms;
+hr{
+  margin:4px 0;
 }
 
-.gallery {
-  display: grid;
-  max-width: 1140px;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-auto-rows: 240px;
-  grid-gap: 12px;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+.search-form {
+display: block;
+position: relative;
+width: 50%;
+max-width: 200px;
+margin-left: auto;
+margin-right: auto;
 }
 
-.gallery__item {
-  position: relative;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-}
-
-.gallery__image:hover {
-  transform: scale(1.03);
-}
-
-.gallery__image {
-  height: 100%;
+input[type="text"]{
+  padding: 2px 20px 2px 2px;
   width: 100%;
-  object-fit: cover;
-  transition: transform var(--animation-duration) var(--timing-function);
+  border-style: none;
+  border: 1px solid #aaa;
+  border-radius: 2px;
+  vertical-align: middle;
+  height: 16px;
 }
 
-.gallery__link {
-  display: block;
-  text-decoration: none;
-  height: 100%;
+button[type="submit"]{
+  position: absolute;
+  border: 0;
+  cursor: pointer;
+  overflow: hidden;
+  top: 4px;
+  left: calc(100% + 4px);
+  text-indent: -999px;
+  height: 20px;
+  width:20px;
+  background: url(./img/search.svg) no-repeat;
+  background-position: 1px;
 }
-
-.gallery__link:hover {
-  cursor: zoom-in;
-} */
