--- a/src/common.css
+++ b/src/common.css
@@ -36,6 +36,7 @@ input[type="text"]{
   border-radius: 2px;
   vertical-align: middle;
   height: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 button[type="submit"]{
@@ -43,11 +44,11 @@ button[type="submit"]{
   border: 0;
   cursor: pointer;
   overflow: hidden;
-  top: 4px;
+  top: 5px;
   left: calc(100% + 4px);
   text-indent: -999px;
-  height: 20px;
-  width:20px;
+  height: 16px;
+  width:16px;
   background: url(./img/search.svg) no-repeat;
   background-position: 1px;
 }
@@ -98,4 +99,34 @@ img{
   display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.btn-more{
+  display:block;
+  background-color: #4056b4;
+  color:#fafafa;
+  border-radius: 4px;
+  border: none;
+  margin: 10px auto;
+  padding:6px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
+.no-pointer{
+  cursor: default;
 }
