--- a/src/common.css
+++ b/src/common.css
@@ -15,8 +15,11 @@ body {
 fieldset{
   background-color: #4056b4;
   padding: 10px 0;
-  margin-bottom:10px;
+  top: 0;
   border: none;
+  position:fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .search-form {
@@ -64,6 +67,7 @@ button[type="submit"]{
   /* list-style: none; */
   margin-left: auto;
   margin-right: auto;
+  padding: 60px;
 }
 
 .photo-card:hover{
@@ -114,19 +118,28 @@ img{
   clip-path: inset(50%);
   margin: -1px;
 }
+.more-block{
+  display:flex;
+  justify-content: center;
+}
 
-.btn-more{
+.load-more{
   display:block;
   background-color: #4056b4;
   color:#fafafa;
   border-radius: 4px;
   border: none;
-  margin: 10px auto;
+  margin: 10px;
   padding:6px;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
   cursor: pointer;
 }
-.no-pointer{
-  cursor: default;
+
+
+.notification-text{
+  padding:20px;
+  font-size: 16px;
+  letter-spacing: 1.02;
+  font-family: Arial, Helvetica, sans-serif;
 }
